feat: Implementación de exepciones en reportes y cambios de estructura para la generación de reportes